# jlucourse

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: ci.yml
design/auth/: login.html
design/screens/: batch-select.html  console.html
src/: app.rs  design.css
src-proxy/: Cargo.toml
src-proxy/src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
