[package]
name = "funky-lesson-ui"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8.8", features = ["csr"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.27"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
gloo-timers = {version="0.3.0",features=["futures"]}
funky_lesson_core = { git = "https://github.com/Islatri/funky_lesson_core.git", default-features = false, features = ["wasm", "gui"]}
# funky_lesson_core = { path = "../funky_lesson_core", default-features = false, features = ["wasm", "gui"]}
[workspace]
members = ["src-tauri"]
