[package]
name = "funky_lesson_proxy"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls","json", "cookies"]}
actix-web = "4.11.0"
actix-cors = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
log = "0.4.27"
env_logger = "0.11.8"
