[package]
name = "funky-lesson"
version = "0.2.0"
description = "Funky Lesson"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "funky_lesson_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tauri = { version = "2.8.4", features = [] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

base64-simd = "0.8.0"
funky_lesson_proxy = { path = "../src-proxy" }
